implemented the notification service
